--- a/UWP/UWP.vcxproj.filters
+++ b/UWP/UWP.vcxproj.filters
@@ -58,9 +58,6 @@
     <Filter Include="include">
       <UniqueIdentifier>{a90a0144-43d9-4e24-9fc3-813c67256943}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\ui\widgets">
-      <UniqueIdentifier>{d05f0bba-9f1d-4d49-83e4-5c54349c5ded}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\ui\views">
       <UniqueIdentifier>{c3660b53-2894-45f6-9125-2515d9231703}</UniqueIdentifier>
     </Filter>
@@ -71,6 +68,9 @@
     <Filter Include="资产\views">
       <UniqueIdentifier>{db6ff301-5af6-4363-8bb4-17548d1940c4}</UniqueIdentifier>
       <Extensions>.xml</Extensions>
+    </Filter>
+    <Filter Include="src\ui\components">
+      <UniqueIdentifier>{525a538f-800b-4e3c-93a3-a52e74bd29fa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -126,53 +126,56 @@
     <ClCompile Include="..\src\ui\views\settings.c">
       <Filter>src\ui\views</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\browser.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\dialog_confirm.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\dialog_password.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\dialog_progress.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\dialog_prompt.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\dropdown.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\filesync.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\progressbar.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\sidebar.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\splashscreen.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\starrating.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\switch.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\textview_i18n.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\thumbview.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\ui\widgets\timeseparator.c">
-      <Filter>src\ui\widgets</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\ui\ui.c">
       <Filter>src\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\browser.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dialog_alert.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dialog_confirm.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dialog_password.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dialog_progress.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dialog_prompt.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\dropdown.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\filesync.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\progressbar.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\sidebar.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\splashscreen.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\starrating.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\switch.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\textview_i18n.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\thumbview.c">
+      <Filter>src\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\ui\components\timeseparator.c">
+      <Filter>src\ui\components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
