--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -33,6 +33,22 @@
     <ClCompile Include="src\lib\sha1.c" />
     <ClCompile Include="src\lib\thumb_db.c" />
     <ClCompile Include="src\lib\thumb_cache.c" />
+    <ClCompile Include="src\ui\components\browser.c" />
+    <ClCompile Include="src\ui\components\dialog_alert.c" />
+    <ClCompile Include="src\ui\components\dialog_confirm.c" />
+    <ClCompile Include="src\ui\components\dialog_password.c" />
+    <ClCompile Include="src\ui\components\dialog_progress.c" />
+    <ClCompile Include="src\ui\components\dialog_prompt.c" />
+    <ClCompile Include="src\ui\components\dropdown.c" />
+    <ClCompile Include="src\ui\components\filesync.c" />
+    <ClCompile Include="src\ui\components\progressbar.c" />
+    <ClCompile Include="src\ui\components\sidebar.c" />
+    <ClCompile Include="src\ui\components\splashscreen.c" />
+    <ClCompile Include="src\ui\components\starrating.c" />
+    <ClCompile Include="src\ui\components\switch.c" />
+    <ClCompile Include="src\ui\components\textview_i18n.c" />
+    <ClCompile Include="src\ui\components\thumbview.c" />
+    <ClCompile Include="src\ui\components\timeseparator.c" />
     <ClCompile Include="src\ui\ui.c" />
     <ClCompile Include="src\ui\views\folders.c" />
     <ClCompile Include="src\ui\views\home.c" />
@@ -40,21 +56,6 @@
     <ClCompile Include="src\ui\views\picture_info.c" />
     <ClCompile Include="src\ui\views\search.c" />
     <ClCompile Include="src\ui\views\settings.c" />
-    <ClCompile Include="src\ui\widgets\browser.c" />
-    <ClCompile Include="src\ui\widgets\dialog_confirm.c" />
-    <ClCompile Include="src\ui\widgets\dialog_password.c" />
-    <ClCompile Include="src\ui\widgets\dialog_progress.c" />
-    <ClCompile Include="src\ui\widgets\dialog_prompt.c" />
-    <ClCompile Include="src\ui\widgets\dropdown.c" />
-    <ClCompile Include="src\ui\widgets\filesync.c" />
-    <ClCompile Include="src\ui\widgets\progressbar.c" />
-    <ClCompile Include="src\ui\widgets\sidebar.c" />
-    <ClCompile Include="src\ui\widgets\splashscreen.c" />
-    <ClCompile Include="src\ui\widgets\starrating.c" />
-    <ClCompile Include="src\ui\widgets\switch.c" />
-    <ClCompile Include="src\ui\widgets\textview_i18n.c" />
-    <ClCompile Include="src\ui\widgets\thumbview.c" />
-    <ClCompile Include="src\ui\widgets\timeseparator.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app\assets\ui-skin.css" />
