--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -19,11 +19,11 @@
     <Filter Include="源文件\ui">
       <UniqueIdentifier>{b7cb1dc6-7c0b-45d1-afe6-eda0dd9567c9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\ui\widgets">
-      <UniqueIdentifier>{d7c0629f-30f0-42e7-9a54-44aeaaadcada}</UniqueIdentifier>
-    </Filter>
     <Filter Include="源文件\ui\views">
       <UniqueIdentifier>{c3af2c6f-ac71-4c0d-9f2d-0277dd529f83}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\ui\components">
+      <UniqueIdentifier>{afd4671a-646f-489d-84bf-272f450f3b83}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -78,53 +78,56 @@
     <ClCompile Include="src\ui\views\settings.c">
       <Filter>源文件\ui\views</Filter>
     </ClCompile>
-    <ClCompile Include="src\ui\widgets\browser.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\dialog_confirm.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\dialog_password.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\dialog_progress.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\dialog_prompt.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\dropdown.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\filesync.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\progressbar.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\sidebar.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\splashscreen.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\starrating.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\switch.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\textview_i18n.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\thumbview.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ui\widgets\timeseparator.c">
-      <Filter>源文件\ui\widgets</Filter>
-    </ClCompile>
     <ClCompile Include="src\ui\ui.c">
       <Filter>源文件\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\browser.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dialog_alert.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dialog_confirm.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dialog_password.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dialog_progress.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dialog_prompt.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\dropdown.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\filesync.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\progressbar.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\sidebar.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\splashscreen.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\starrating.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\switch.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\textview_i18n.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\thumbview.c">
+      <Filter>源文件\ui\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\components\timeseparator.c">
+      <Filter>源文件\ui\components</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
