--- a/.gitignore
+++ b/.gitignore
@@ -253,7 +253,7 @@ src/lib/unqlite.c
 include/sqlite3.h
 include/unqlite.h
 include/config.h
-UWP/[Aa]ssets/*.xml
+UWP/[Aa]ssets/views
 UWP/[Aa]ssets/stylesheets
 UWP/[Aa]ssets/*.ttf
 UWP/[Ll]ocales/
