--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -56,6 +56,7 @@
     <ClCompile Include="src\ui\views\home.c" />
     <ClCompile Include="src\ui\views\picture.c" />
     <ClCompile Include="src\ui\views\picture_info.c" />
+    <ClCompile Include="src\ui\views\picture_scanner.c" />
     <ClCompile Include="src\ui\views\search.c" />
     <ClCompile Include="src\ui\views\settings.c" />
   </ItemGroup>
@@ -88,8 +89,10 @@
     <ClInclude Include="include\thumb_cache.h" />
     <ClInclude Include="include\thumbview.h" />
     <ClInclude Include="include\timeseparator.h" />
+    <ClInclude Include="include\types.h" />
     <ClInclude Include="include\ui.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\ui\views\picture.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LC-Finder.rc" />
