--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="src\ui\views\picture.c">
       <Filter>源文件\ui\views</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\views\picture_loader.c">
+      <Filter>源文件\ui\views</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
