--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -19,8 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="file_cache_leveldb.c" />
-    <ClCompile Include="file_cache_unqlite.c" />
     <ClCompile Include="src\bridge_win32.cpp">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
@@ -33,6 +31,8 @@
     <ClCompile Include="src\lib\file_storage.c" />
     <ClCompile Include="src\lib\i18n.c" />
     <ClCompile Include="src\lib\i18n_detetime.c" />
+    <ClCompile Include="src\lib\kvdb_leveldb.c" />
+    <ClCompile Include="src\lib\kvdb_unqlite.c" />
     <ClCompile Include="src\lib\sha1.c" />
     <ClCompile Include="src\lib\thumb_db.c" />
     <ClCompile Include="src\lib\thumb_cache.c" />
@@ -81,6 +81,7 @@
     <ClInclude Include="include\finder.h" />
     <ClInclude Include="include\i18n.h" />
     <ClInclude Include="include\i18n_datetime.h" />
+    <ClInclude Include="include\kvdb.h" />
     <ClInclude Include="include\progressbar.h" />
     <ClInclude Include="include\sha1.h" />
     <ClInclude Include="include\starrating.h" />
