--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -135,10 +135,10 @@
     <ClCompile Include="src\ui\views\picture.c">
       <Filter>源文件\ui\views</Filter>
     </ClCompile>
-    <ClCompile Include="file_cache_unqlite.c">
+    <ClCompile Include="src\lib\kvdb_leveldb.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="file_cache_leveldb.c">
+    <ClCompile Include="src\lib\kvdb_unqlite.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -229,6 +229,9 @@
       <Filter>源文件\ui\views</Filter>
     </ClInclude>
     <ClInclude Include="include\types.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\kvdb.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
